@@ -6,6 +6,8 @@ PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.
 
 * Bug fixes *
 
+- #5795, Fix ST_NewEdgesSplit can cause invalid topology
+         (Björn Harrtell
 - #5794, Fix crash in TopoGeo_addPoint (Sandro Santilli)
 - #5785, [raster] ST_MapAlgebra segfaults when expression references
          a supernumerary rast argument (Dian M Fay)
